# greatexpectations-demo

./: .gitignore  .pre-commit-config.yaml  INSTALL.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
config/: demo-datasource.py
data/: 2019_Yellow_Taxi_Trip_Data.csv
gx/: great_expectations.yml
gx/expectations/: .ge_store_backend_id
