[tool.poetry]
name = "gx-demo"
version = "0.1.0"
description = ""
authors = ["rterluun <noreply@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
great-expectations = "^0.18.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
